--- a/blog.html
+++ b/blog.html
@@ -197,7 +197,7 @@
                         >There's goting to be a musical about meghan
                       </a>
                     </h5>
-                    <div class="amenities-meta mb-10">
+                    <div class="amenities-meta mb-10 n">
                       <a href="#" class
                         ><span class="ti-calendar"></span>20th Nov, 2018</a
                       >
