--- a/index.html
+++ b/index.html
@@ -57,16 +57,10 @@
 
       <div class="custom-modal" id="mainModal">
         <div class="custom-modal-content">
-          <a href="talim.html" class="col">Ta’lim</a>
-          <a href="uyjoy.html">Uy&nbsp;joy</a>
-          <a href="avtotransport.html">Avtotransport</a>
-          <a href="kaferestoran.html">Kafe&nbsp;Restoran</a>
-          <a href="sport.html">Sport</a>
-          <a href="savdodokon.html">Savdo&nbsp;do’kon</a>
-          <a href="kongilochar.html">Ko’ngilochar</a>
-          <a href="xizmatlar.html">Xizmatlar</a>
+          <!-- JavaScript bu yerga dinamik ravishda ma'lumotlarni qo'shadi -->
         </div>
       </div>
+      
     </div>
     <script
       type="text/javascript"
@@ -106,5 +100,7 @@
         document.body.classList.add("modal-open");
       });
     </script>
+    <script src="./js/main.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
