--- a/blogs.html
+++ b/blogs.html
@@ -53,7 +53,7 @@
             <div class="col-4 text-lg-center mt-2 mt-lg-0">
               <span class="logo-outer">
                 <span class="logo-inner">
-                  <a href="index.html">Ozodbobo</a>
+                  <a>Ozodbobo</a>
                 </span>
               </span>
             </div>
@@ -137,9 +137,36 @@
       </div>
     </section>
 
-    <footer class="footer-area">
-      <div class="container">Logo, navigation, etc.</div>
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-left">
+            <h2>OZODBOBO</h2>
+          </div>
+          <div class="footer-right">
+            <a href="https://telegram.org" target="_blank" class="social-icon">
+              <i class="fa-brands fa-telegram"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank" class="social-icon">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://youtube.com" target="_blank" class="social-icon">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="https://facebook.com" target="_blank" class="social-icon">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>2024 - yil ishlab chiqarilgan</p>
+        </div>
+      </div>
     </footer>
+    
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script
