--- a/index.html
+++ b/index.html
@@ -28,25 +28,31 @@
           </span>
         </span>
         <div class="index_icons">
-          <a target="_blank" href="https://t.me/">
+          <a target="_blank" href="https://t.me/ozodbobo">
             <i
               class="fa-brands fa-telegram fa-shake fa-xs"
               style="color: #111111ce"
             ></i>
           </a>
-          <a target="_blank" href="https://instagram.com">
+          <a target="_blank" href="https://www.instagram.com/ozod_yuliyev/">
             <i
               class="fa-brands fa-instagram fa-shake fa-xs"
               style="color: #111"
             ></i>
           </a>
-          <a target="_blank" href="https://youtube.com">
+          <a
+            target="_blank"
+            href="https://youtube.com/@ozodbobouz?si=6bZ25CEGysT2mF98"
+          >
             <i
               class="fa-brands fa-youtube fa-shake fa-xs"
               style="color: #111"
             ></i>
           </a>
-          <a target="_blank" href="https://youtube.com">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/share/2G19uhgQfuixJ2JN/?mibextid=qi2Omg"
+          >
             <i
               class="fa-brands fa-facebook fa-shake fa-xs"
               style="color: #111"
@@ -60,7 +66,6 @@
           <!-- JavaScript bu yerga dinamik ravishda ma'lumotlarni qo'shadi -->
         </div>
       </div>
-      
     </div>
     <script
       type="text/javascript"
