--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,9 @@
                 data-toggle="collapse"
                 data-target="#collapsibleNavbar"
               >
-                <span class="lnr lnr-menu">menu</span>
+                <span class="lnr lnr-menu">
+                  <i class="fa-solid fa-bars"></i>
+                </span>
               </button>
               <div
                 class="collapse navbar-collapse menu-right"
@@ -95,7 +97,7 @@
                 <div class="single-amenities">
                   <div class="section_image">
                     <div class="container">
-                      <div class="carousel">
+                      <div class="carousel sarousel_img">
                         <input
                           type="radio"
                           name="slides"
@@ -147,16 +149,18 @@
                     />
                   </div>
                   <div class="form-group">
-                    <textarea id="comment" placeholder="Izohingizni yozing"></textarea>
+                    <textarea
+                      id="comment"
+                      placeholder="Izohingizni yozing"
+                    ></textarea>
                   </div>
                   <button class="submit-btn">Yuborish</button>
                 </div>
-                
+
                 <!-- Feedback Modal -->
                 <div id="feedback-modal" class="feedback-modal">
                   <div id="feedback-message" class="feedback-message"></div>
                 </div>
-                
               </div>
             </div>
           </div>
@@ -164,7 +168,7 @@
           <div class="col-lg-4 sidebar-widgets">
             <div class="widget-wrap">
               <div class="single-sidebar-widget popular-post-widget">
-                <h4 class="popular-title">Popular Posts</h4>
+                <h4 class="popular-title">Ko'p O'qilgan</h4>
                 <div class="popular-post-list" id="popularPostsList">
                   <!-- Dinamik ravishda JavaScript yordamida kartalar joylashtiriladi -->
                 </div>
@@ -174,6 +178,45 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-left">
+            <h2>OZODBOBO</h2>
+          </div>
+          <div class="footer-right">
+            <a href="https://t.me/ozodbobo" target="_blank" class="social-icon">
+              <i class="fa-brands fa-telegram"></i>
+            </a>
+            <a
+              href="https://www.instagram.com/ozod_yuliyev/"
+              target="_blank"
+              class="social-icon"
+            >
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a
+              href="https://youtube.com/@ozodbobouz?si=6bZ25CEGysT2mF98"
+              target="_blank"
+              class="social-icon"
+            >
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a
+              href="https://www.facebook.com/share/2G19uhgQfuixJ2JN/?mibextid=qi2Omg"
+              target="_blank"
+              class="social-icon"
+            >
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>2024 - yil ishlab chiqarilgan</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="./js/blog.js"></script>
   </body>
