--- a/blog.html
+++ b/blog.html
@@ -85,6 +85,17 @@
             </nav>
           </div>
         </div>
+        <div class="header_wrap_mobile">
+          <a href="index.html">Ozodbobo</a>
+          <nav class="navbar_mobile">
+            <button class="navbar_toggler">
+              <i class="fas fa-bars"></i>
+            </button>
+            <ul class="mobile_nav mobile_nav_act" id="menuRightMobile">
+              <!-- Dynamic menu items will be inserted here -->
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
 
