--- a/blogs.html
+++ b/blogs.html
@@ -136,7 +136,7 @@
       </div>
     </section>
 
-    <section class="carousel_galarey">
+    <!-- <section class="carousel_galarey">
       <div class="gallery">
         <img
           src="./img/slider/B65A3287.webp"
@@ -160,7 +160,7 @@
           alt="a laptop and many books around it"
         />
       </div>
-    </section>
+    </section> -->
 
     <section class="blog-post-area section-gap relative">
       <div class="container">
@@ -198,7 +198,10 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-left">
-            <h2>OZODBOBO</h2>
+            <div class="footer_left_info">
+              <img src="./img/logo.jpg" alt="" class="f_logo" />
+              <h2>OZODBOBO</h2>
+            </div>
             <a href="tel:+998997006056" class="phone social-icon">
               <i class="fa-solid fa-phone"></i> +998 99 700 60 56
             </a>
