--- a/blog.html
+++ b/blog.html
@@ -194,33 +194,59 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-left">
-            <h2>OZODBOBO</h2>
+            <div class="footer_left_info">
+              <img src="./img/logo.jpg" alt="" class="f_logo" />
+              <h2>OZODBOBO</h2>
+            </div>
+            <a href="tel:+998997006056" class="phone social-icon">
+              <i class="fa-solid fa-phone"></i> +998 99 700 60 56
+            </a>
+            <a href="tel:+998995021771" class="phone social-icon">
+              <i class="fa-solid fa-phone"></i> +998 99 502 17 71
+            </a>
+            <a href="mailto:yuliev.ozod@mail.ru" class="phone social-icon">
+              <i class="fa-solid fa-envelope"></i> yuliev.ozod@mail.ru
+            </a>
+            <div class="footer_icons">
+              <a
+                href="https://t.me/ozodbobo"
+                target="_blank"
+                class="social-icon"
+              >
+                <i class="fa-brands fa-telegram"></i>
+              </a>
+              <a
+                href="https://www.instagram.com/ozod_yuliyev/"
+                target="_blank"
+                class="social-icon"
+              >
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a
+                href="https://youtube.com/@ozodbobouz?si=6bZ25CEGysT2mF98"
+                target="_blank"
+                class="social-icon"
+              >
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+              <a
+                href="https://www.facebook.com/share/2G19uhgQfuixJ2JN/?mibextid=qi2Omg"
+                target="_blank"
+                class="social-icon"
+              >
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+            </div>
           </div>
           <div class="footer-right">
-            <a href="https://t.me/ozodbobo" target="_blank" class="social-icon">
-              <i class="fa-brands fa-telegram"></i>
-            </a>
-            <a
-              href="https://www.instagram.com/ozod_yuliyev/"
-              target="_blank"
-              class="social-icon"
-            >
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a
-              href="https://youtube.com/@ozodbobouz?si=6bZ25CEGysT2mF98"
-              target="_blank"
-              class="social-icon"
-            >
-              <i class="fa-brands fa-youtube"></i>
-            </a>
-            <a
-              href="https://www.facebook.com/share/2G19uhgQfuixJ2JN/?mibextid=qi2Omg"
-              target="_blank"
-              class="social-icon"
-            >
-              <i class="fa-brands fa-facebook"></i>
-            </a>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49073.96372148296!2d64.35419894863283!3d39.75935269999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3f5007d7f6de71e3%3A0xb39d99bb8d8fe920!2zMzQg0KLQnyDQv9GA0Lgg0J7QktCUINCz0L7RgNC-0LTQsCDQkdGD0YXQsNGA0Ys!5e0!3m2!1sru!2s!4v1723048759447!5m2!1sru!2s"
+              width="600"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </div>
         <div class="footer-bottom">
